--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -14,10 +14,10 @@
         android:id="@+id/textInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:boxCornerRadiusBottomEnd="20px"
-        app:boxCornerRadiusBottomStart="20px"
-        app:boxCornerRadiusTopEnd="20px"
-        app:boxCornerRadiusTopStart="20px"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="30dp">
 
@@ -51,7 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@drawable/iv_rounded_button"
         android:text="@string/cari_trip"
         app:layout_constraintTop_toBottomOf="@+id/ipv_tglBerangkat"
+        android:textColor="@android:color/white"
         tools:layout_editor_absoluteX="30dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
