--- a/app/src/main/res/layout/fragment_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_onboarding_1.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="7-dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
