--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_primary">#FF31B7AC</color>
     <color name="green_light">#FFE8F7F6</color>
+    <color name="ratings_yellow">#FFDF00</color>
 </resources>
