--- a/app/src/main/res/layout/fragment_auth_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_1.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="0dp"
-    tools:context=".OnboardingFragmentGate">
+    tools:context=".ui.auth.onboarding.OnboardingFragment1">
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="70dp"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-15dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/iv_illustration_onboarding_gate"
+        android:src="@drawable/iv_illustration_onboarding_1"
         android:contentDescription="@string/illustration_desc"
         android:scaleType="fitCenter"/>
 
@@ -38,7 +38,7 @@
         android:layout_below="@id/illustration"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="Onboarding 1"
+        android:text="@string/onboarding_1"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
@@ -52,49 +52,26 @@
         android:layout_marginTop="8dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id."
+        android:text="@string/lorem_ipsum_2"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:gravity="center"/>
 
-    <LinearLayout
-        android:id="@+id/button_container"
+    <Button
+        style="@style/Widget.Material3.Button.Icon"
+        android:id="@+id/next_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/onboarding_description"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:orientation="horizontal">
-
-        <Button
-            style="@style/Widget.Material3.Button.Icon"
-            app:iconSize="wrap_content"
-            app:icon="@drawable/ic_navigate_next_24"
-            app:iconGravity="textEnd"
-            android:paddingEnd="14dp"
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:backgroundTint="@color/green_light"
-            app:iconTint="@color/green_primary"
-            android:text="Masuk"
-            android:textColor="@color/green_primary"
-            android:drawableStart="@drawable/ic_login"/>
-
-        <Button
-            style="@style/Widget.Material3.Button.Icon"
-            app:iconSize="wrap_content"
-            app:icon="@drawable/ic_person_add_alt_1_24"
-            app:iconGravity="textEnd"
-            android:paddingEnd="16dp"
-            android:id="@+id/register_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/green_primary"
-            android:text="Daftar"
-            android:textColor="@android:color/white"/>
-
-    </LinearLayout>
+        android:backgroundTint="@color/green_primary"
+        app:iconSize="24dp"
+        app:icon="@drawable/ic_navigate_next_24"
+        app:iconGravity="textEnd"
+        app:iconPadding="0dp"
+        android:paddingEnd="8dp"
+        android:text="Next"
+        android:textColor="@android:color/white"/>
 
 </RelativeLayout>
