--- a/app/src/main/res/layout/fragment_auth_onboarding_2.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_2.xml
@@ -5,11 +5,11 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="0dp"
-    tools:context=".OnboardingFragment1">
+    tools:context=".ui.auth.onboarding.OnboardingFragment2">
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="90dp"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-15dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/iv_illustration_onboarding_1"
+        android:src="@drawable/iv_illustration_onboarding_2"
         android:contentDescription="@string/illustration_desc"
         android:scaleType="fitCenter"/>
 
@@ -38,7 +38,7 @@
         android:layout_below="@id/illustration"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="Onboarding 1"
+        android:text="@string/onboarding_2"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
@@ -52,7 +52,7 @@
         android:layout_marginTop="8dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id."
+        android:text="@string/lorem_ipsum"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:gravity="center"/>
@@ -66,7 +66,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/green_primary"
-        app:iconSize="wrap_content"
+        app:iconSize="24dp"
         app:icon="@drawable/ic_navigate_next_24"
         app:iconGravity="textEnd"
         app:iconPadding="0dp"
