--- a/app/src/main/res/layout/fragment_auth_onboarding_gate.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_gate.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="0dp"
-    tools:context=".OnboardingFragment2">
+    tools:context=".ui.auth.onboarding.OnboardingFragmentGate">
 
     <ImageView
         android:id="@+id/logo"
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-15dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/iv_illustration_onboarding_2"
+        android:src="@drawable/iv_illustration_onboarding_gate"
         android:contentDescription="@string/illustration_desc"
         android:scaleType="fitCenter"/>
 
@@ -38,7 +38,7 @@
         android:layout_below="@id/illustration"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="@string/onboarding_2"
+        android:text="Onboarding 1"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
@@ -52,26 +52,48 @@
         android:layout_marginTop="8dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="@string/lorem_ipsum"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id."
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:gravity="center"/>
 
-    <Button
-        style="@style/Widget.Material3.Button.Icon"
-        android:id="@+id/next_button"
+    <LinearLayout
+        android:id="@+id/button_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/onboarding_description"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/green_primary"
-        app:iconSize="wrap_content"
-        app:icon="@drawable/ic_navigate_next_24"
-        app:iconGravity="textEnd"
-        app:iconPadding="0dp"
-        android:paddingEnd="8dp"
-        android:text="Next"
-        android:textColor="@android:color/white"/>
+        android:orientation="horizontal">
+
+        <Button
+            style="@style/Widget.Material3.Button.Icon"
+            app:iconSize="24dp"
+            app:icon="@drawable/ic_navigate_next_24"
+            app:iconGravity="textEnd"
+            android:paddingEnd="14dp"
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:backgroundTint="@color/green_light"
+            app:iconTint="@color/green_primary"
+            android:text="Masuk"
+            android:textColor="@color/green_primary"/>
+
+        <Button
+            style="@style/Widget.Material3.Button.Icon"
+            app:iconSize="24dp"
+            app:icon="@drawable/ic_person_add_alt_1_24"
+            app:iconGravity="textEnd"
+            android:paddingEnd="16dp"
+            android:id="@+id/register_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/green_primary"
+            android:text="Daftar"
+            android:textColor="@android:color/white"/>
+
+    </LinearLayout>
 
 </RelativeLayout>
