--- a/app/src/main/res/layout/fragment_auth_register.xml
+++ b/app/src/main/res/layout/fragment_auth_register.xml
@@ -6,8 +6,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingVertical="16dp"
     android:paddingHorizontal="30dp"
-    android:background="@drawable/iv_background_gradient_light_green">
-    tools:context=".RegisterFragment">
+    android:background="@drawable/iv_background_gradient_light_green"
+    tools:context=".ui.auth.register.RegisterFragment">
 
     <ImageView
         android:id="@+id/logo"
