--- a/app/src/main/res/layout/fragment_auth_register_verification.xml
+++ b/app/src/main/res/layout/fragment_auth_register_verification.xml
@@ -7,7 +7,7 @@
     android:paddingVertical="16dp"
     android:paddingHorizontal="30dp"
     android:background="@drawable/iv_background_gradient_light_green"
-    tools:context=".VerificationFragment">
+    tools:context=".ui.auth.registerverification.VerificationFragment">
 
     <ImageView
         android:id="@+id/logo"
