--- a/app/src/main/res/layout/fragment_cust_beranda.xml
+++ b/app/src/main/res/layout/fragment_cust_beranda.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.cust.CustActivity">
+    android:padding="16dp"
+    tools:context=".ui.cust.beranda.BerandaFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewBanner"
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/gunung_terpopuler"
+        android:textSize="18sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -31,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:textSize="18sp"
         android:text="@string/rekomendasi_trip"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
