--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -1,5 +1,6 @@
 <!-- res/layout/item_banner.xml -->
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="    @+id/iv_banner"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:scaleType="centerCrop"/>
