--- a/app/src/main/res/layout/item_mountain.xml
+++ b/app/src/main/res/layout/item_mountain.xml
@@ -16,6 +16,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
-        android:text="Mountain Name"
+        android:text="@string/mountain_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 </LinearLayout>
