--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -8,7 +8,6 @@
     android:layout_margin="10dp"
     android:orientation="vertical">
 
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_itemTrip"
         android:layout_width="wrap_content"
@@ -31,7 +30,7 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_namaTripCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -40,25 +39,25 @@
                 android:textStyle="bold"
                 tools:text="Nama Trip" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal">-->
 
-                <ImageView
-                    android:id="@+id/ic_lokasi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_location_24_black" />
+<!--                <ImageView-->
+<!--                    android:id="@+id/ic_lokasi"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    app:srcCompat="@drawable/ic_location_24_black" />-->
 
-                <TextView
-                    android:id="@+id/tv_lokasi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    tools:text="Lokasi" />
-            </LinearLayout>
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_lokasi"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    tools:text="Lokasi" />-->
+<!--            </LinearLayout>-->
 
             <LinearLayout
 
@@ -79,25 +78,25 @@
                         tools:text="Rp. XXX.YYYYY" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="horizontal">-->
 
-                    <ImageView
-                        android:id="@+id/ic_grup"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_persons" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/ic_grup"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        app:srcCompat="@drawable/ic_persons" />-->
 
-                    <TextView
-                        android:id="@+id/tv_peserta"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        tools:text="4/10" />
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/tv_peserta"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="1"-->
+<!--                        tools:text="4/10" />-->
+<!--                </LinearLayout>-->
             </LinearLayout>
 
         </LinearLayout>
