--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -1,135 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/it_trip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:orientation="vertical">
+    android:layout_margin="6dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="1dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_itemTrip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="100dp"
-        app:cardCornerRadius="10dp">
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="7dp">
 
-        <LinearLayout
+    <!-- Trip Image with Heart Icon -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardViewTrip"
+        android:layout_width="135dp"
+        android:layout_height="110dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="8dp">
+            <ImageView
+            android:id="@+id/imageViewTrip"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:scaleType="centerCrop" />
+    </com.google.android.material.card.MaterialCardView>
+
+    <ImageButton
+        android:id="@+id/buttonLove"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_margin="8dp"
+        android:background="@drawable/circle_background"
+        android:padding="4dp"
+        app:layout_constraintTop_toTopOf="@id/cardViewTrip"
+        app:layout_constraintEnd_toEndOf="@id/cardViewTrip"
+        android:src="@drawable/ic_heart_outline" />
+
+    <!-- Grouped elements -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingHorizontal="4dp"
+        app:layout_constraintTop_toBottomOf="@id/cardViewTrip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Trip Name -->
+        <TextView
+            android:id="@+id/textViewTripName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="Trip Name"
+            android:textSize="18sp" />
+
+        <!-- Mountain Name with Icon -->
+        <LinearLayout
+            android:id="@+id/layoutMountainName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginTop="4dp">
 
             <ImageView
-                android:id="@+id/iv_imageTrip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:baselineAlignBottom="false"
-                android:textAlignment="center"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:src="@drawable/ic_place_outline" />
 
             <TextView
-                android:id="@+id/tv_namaTripCard"
+                android:id="@+id/textViewMountainName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:text="Nama Trip" />
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/ic_lokasi"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    app:srcCompat="@drawable/ic_location_24_black" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/tv_lokasi"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    tools:text="Lokasi" />-->
-<!--            </LinearLayout>-->
-
-            <LinearLayout
-
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_harga"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        tools:text="Rp. XXX.YYYYY" />
-                </LinearLayout>
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <ImageView-->
-<!--                        android:id="@+id/ic_grup"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        app:srcCompat="@drawable/ic_persons" />-->
-
-<!--                    <TextView-->
-<!--                        android:id="@+id/tv_peserta"-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:layout_weight="1"-->
-<!--                        tools:text="4/10" />-->
-<!--                </LinearLayout>-->
-            </LinearLayout>
-
+                android:layout_marginStart="4dp"
+                android:text="Mountain Name"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        <!-- Price and Capacity -->
+        <LinearLayout
+            android:id="@+id/layoutPriceCapacity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginTop="6dp">
 
-<!-- res/layout/item_trip.xml -->
-<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+            <TextView
+                android:id="@+id/textViewPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rp 150.000"
+                android:textColor="@android:color/holo_green_dark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:layout_weight="1"/>
 
-    <ImageView
-        android:id="@+id/imageViewTrip"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:scaleType="centerCrop"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/textViewTripName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:text="Trip Name"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_person_outline" />
 
-    <TextView
-        android:id="@+id/textViewTripPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:text="Rp 0"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
-</LinearLayout> -->
+                <TextView
+                    android:id="@+id/textViewCapacity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:text="99"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView>
