--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_secondary">#B5B5B5</color>
+    <color name="white_bg">#F8F9FA</color>
     <color name="green_primary">#FF31B7AC</color>
     <color name="green_light">#FFE8F7F6</color>
     <color name="ratings_yellow">#FFDF00</color>
