--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.HighKing" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
          <item name="colorPrimary">@color/green_primary</item>
+         <item name="colorSecondary">@color/white</item>
+         <item name="colorTertiary">@color/white</item>
+         <item name="android:colorBackground">@color/white_bg</item>
     </style>
 
     <style name="Theme.HighKing" parent="Base.Theme.HighKing" />
