--- a/app/src/main/res/layout/activity_cust.xml
+++ b/app/src/main/res/layout/activity_cust.xml
@@ -22,6 +22,16 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:background="@color/white"
+        app:itemIconTint="@drawable/custom_bottom_navbar"
+        app:itemBackground="@drawable/custom_bottom_nav_bg"
+        app:itemRippleColor="@color/transparent"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
+        app:itemTextAppearanceActive="@style/BottomNavigationLabelStyle"
+        app:itemTextAppearanceInactive="@style/BottomNavigationLabelStyle"
+        app:itemTextColor="@drawable/custom_bottom_navbar"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
