--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="green_primary">#FF31B7AC</color>
     <color name="green_light">#FFE8F7F6</color>
     <color name="ratings_yellow">#FFDF00</color>
+    <color name="selected_item_color">#FF31B7AC</color>
+    <color name="unselected_item_color">#FFFFFFFF</color>
+
+    <color name="dark_grey">#FFC6C6C6</color>
+    <color name="grey">#FFE7EAF2</color>
+    <color name="grey_bg">#FFF4F5F6</color>
+    <color name="grey_navbar">#FFC6CCD1</color>
+    <color name="light_grey">#FFF8F8F8</color>
+    <color name="transparent">#00000000</color>
 </resources>
