--- a/app/src/main/res/layout/activity_cust.xml
+++ b/app/src/main/res/layout/activity_cust.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.cust.CustActivity">
 
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_cust"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+    <!-- Fragment Container -->
     <fragment
         android:id="@+id/nav_host_fragment_cust"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -13,11 +23,12 @@
         android:layout_height="0dp"
         app:navGraph="@navigation/nav_graph_cust"
         app:defaultNavHost="true"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_cust"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent" />
 
+    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
