--- a/app/src/main/res/layout/fragment_cust_beranda.xml
+++ b/app/src/main/res/layout/fragment_cust_beranda.xml
@@ -10,37 +10,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Header -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingHorizontal="16dp"
-            android:paddingVertical="8dp"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Welcome Back, Daffa!"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_weight="1"/>
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_search"
-                android:padding="8dp"/>
-        </LinearLayout>
-
         <!-- Banners -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewBanner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="8dp"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
 
         <!-- Section: Gunung Terpopuler -->
         <LinearLayout
@@ -53,20 +29,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:paddingTop="8dp"
+                android:paddingHorizontal="8dp"
                 android:text="@string/gunung_terpopuler"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/gunung_terpopuler_lihat_semua"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:paddingTop="8dp"
+                android:paddingHorizontal="8dp"
                 android:text="Lihat Semua"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/green_primary" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -75,7 +54,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:paddingBottom="8dp"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
 
         <!-- Section: Rekomendasi Trip -->
         <LinearLayout
@@ -88,20 +67,23 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:paddingTop="8dp"
+                android:paddingHorizontal="8dp"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="@string/rekomendasi_trip"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/rekomendasi_trip_lihat_semua"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="8dp"
+                android:paddingTop="8dp"
+                android:paddingHorizontal="8dp"
                 android:text="Lihat Semua"
                 android:textSize="14sp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@color/green_primary" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -110,6 +92,40 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:paddingBottom="8dp"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
+
+        <!-- New Section: Temukan Trip Terdekat! -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
+            android:background="@drawable/custom_border_top_bottom">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_near_map"
+                android:layout_marginStart="5dp"
+                android:padding="8dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Temukan Trip Terdekat!"
+                android:textSize="16sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:layout_weight="1" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_navigate_next_24"
+                android:padding="8dp" />
+        </LinearLayout>
+
     </LinearLayout>
 </ScrollView>
