--- a/app/src/main/res/layout/fragment_cust_detail_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_trip.xml
@@ -82,7 +82,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_namaTrip">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/tv_namaGunung"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
